moved html to right place

--- a/new code/index.html
+++ b/new code/index.html
@@ -8,135 +8,134 @@
     <link rel="stylesheet" href="./style.css" />
     <script src="javascript.js"></script>
   </head>
-  <body></body>
-</html>
-
-<body>
-  <header>
-    <h2>Juicy <span>knowledge</span></h2>
-    <!-- Some kind of logo and navbar -->
-    <div class="nav-links-desktop">
-      <nav>
-        <ul>
-          <li><a href="https://www.google.com/">Home</a></li>
-          <li><a href="https://www.google.com/">About</a></li>
-          <li><a href="https://www.google.com/">Service</a></li>
-          <li><a href="https://www.google.com/">Portfolio</a></li>
-          <li><a href="https://www.google.com/">Contact us</a></li>
-        </ul>
-      </nav>
-    </div>
-    <div class="dropdown-tablet-mobile">
-      <button class="dropbtn" onclick="myDropdown()"></button>
-      <div class="dropdown-content" id="dropdown-id">
+  <body>
+    <header>
+      <h2>Juicy <span>knowledge</span></h2>
+      <!-- Some kind of logo and navbar -->
+      <div class="nav-links-desktop">
         <nav>
-          <a href="https://www.google.com/">Home</a>
-          <a href="https://www.google.com/">About</a>
-          <a href="https://www.google.com/">Service</a
-          ><a href="https://www.google.com/">Portfolio</a
-          ><a href="https://www.google.com/">Contact</a>
+          <ul>
+            <li><a href="https://www.google.com/">Home</a></li>
+            <li><a href="https://www.google.com/">About</a></li>
+            <li><a href="https://www.google.com/">Service</a></li>
+            <li><a href="https://www.google.com/">Portfolio</a></li>
+            <li><a href="https://www.google.com/">Contact us</a></li>
+          </ul>
         </nav>
       </div>
-    </div>
-    <button class="subscribe" type="button">Subscribe</button>
-  </header>
+      <div class="dropdown-tablet-mobile">
+        <button class="dropbtn" onclick="myDropdown()"></button>
+        <div class="dropdown-content" id="dropdown-id">
+          <nav>
+            <a href="https://www.google.com/">Home</a>
+            <a href="https://www.google.com/">About</a>
+            <a href="https://www.google.com/">Service</a
+            ><a href="https://www.google.com/">Portfolio</a
+            ><a href="https://www.google.com/">Contact</a>
+          </nav>
+        </div>
+      </div>
+      <button class="subscribe" type="button">Subscribe</button>
+    </header>
 
-  <section class="grid-parent">
-    <div class="grid-item big-grid-item">
-      <img
-        class="juicy"
-        src="https://images.unsplash.com/photo-1516105442523-f6e1d7888852?crop=entropy&cs=tinysrgb&fm=jpg&ixid=MnwzMjM4NDZ8MHwxfHJhbmRvbXx8fHx8fHx8fDE2NTkzNzQ2NTM&ixlib=rb-1.2.1&q=80"
-        alt="juicy lemon background"
-      />
-      <div class="main-news">
-        <h1>Welcome to the Juicy news!</h1>
-        <p>
-          This news site is just a sneak peak into the fantastic tools we will
-          master by January 2023! The knowledge will be juicy and curiosity
-          close to unstoppable. Get ready we are starting!
-        </p>
-        <button class="read-more" type="button">Read more</button>
-      </div>
-    </div>
-    <div class="grid-item">
-      <div class="news html">
-        <img class="html-logo" src="html-logo.png" alt="html-logo" />
-        <h2>HTML</h2>
-        <p>The structure planner we can always rely on! 📔</p>
-      </div>
-    </div>
-    <div class="grid-item">
-      <div class="news css">
-        <img class="css-logo" src="css-logo.png" alt="css-logo" />
-        <h2>CSS</h2>
-        <p>Cascading Style Sheets, the winner of our beauty contest! 👑</p>
-      </div>
-    </div>
-    <div class="grid-item">
-      <div class="news javascript">
+    <section class="grid-parent">
+      <div class="grid-item big-grid-item">
         <img
-          class="javascript-logo"
-          src="javascript-logo.png"
-          alt="javascript-logo"
+          class="juicy"
+          src="https://images.unsplash.com/photo-1516105442523-f6e1d7888852?crop=entropy&cs=tinysrgb&fm=jpg&ixid=MnwzMjM4NDZ8MHwxfHJhbmRvbXx8fHx8fHx8fDE2NTkzNzQ2NTM&ixlib=rb-1.2.1&q=80"
+          alt="juicy lemon background"
         />
-        <h2>Javascript</h2>
-        <p>
-          A real doer! The one that does not just talk around but actually makes
-          things happen.💪
-        </p>
+        <div class="main-news">
+          <h1>Welcome to the Juicy news!</h1>
+          <p>
+            This news site is just a sneak peak into the fantastic tools we will
+            master by January 2023! The knowledge will be juicy and curiosity
+            close to unstoppable. Get ready we are starting!
+          </p>
+          <button class="read-more" type="button">Read more</button>
+        </div>
       </div>
-    </div>
-    <div class="grid-item">
-      <div class="news react">
-        <img class="react-logo" src="react-logo.png" alt="react-logo" />
-        <h2>React</h2>
-        <p>
-          The ultimate Java-script library that makes your live smoother than an
-          aftershave. 🌬️
-        </p>
+      <div class="grid-item">
+        <div class="news html">
+          <img class="html-logo" src="html-logo.png" alt="html-logo" />
+          <h2>HTML</h2>
+          <p>The structure planner we can always rely on! 📔</p>
+        </div>
       </div>
-    </div>
-    <div class="grid-item">
-      <div class="news c++">
-        <img class="c++-logo" src="c++-logo.png" alt="c++-logo" />
-        <h2>C++</h2>
-        <p>
-          The highest performer in class helping with resources and memory! 🧠
-        </p>
+      <div class="grid-item">
+        <div class="news css">
+          <img class="css-logo" src="css-logo.png" alt="css-logo" />
+          <h2>CSS</h2>
+          <p>Cascading Style Sheets, the winner of our beauty contest! 👑</p>
+        </div>
       </div>
-    </div>
-    <div class="grid-item">
-      <div class="news redux">
-        <img class="redux-logo" src="redux-logo.png" alt="redux-logo" />
-        <h2>Redux</h2>
-        <p>
-          The predictable state container that helps apps to behave
-          consistently. This dude and React are this 🤞 tight.
-        </p>
+      <div class="grid-item">
+        <div class="news javascript">
+          <img
+            class="javascript-logo"
+            src="javascript-logo.png"
+            alt="javascript-logo"
+          />
+          <h2>Javascript</h2>
+          <p>
+            A real doer! The one that does not just talk around but actually
+            makes things happen.💪
+          </p>
+        </div>
       </div>
-    </div>
-    <div class="grid-item">
-      <div class="news github">
-        <img class="github-logo" src="github-logo.png" alt="github-logo" />
-        <h2>Github</h2>
-        <p>
-          The best code hosting platform ever. There is no host like Github! 🏠
-        </p>
+      <div class="grid-item">
+        <div class="news react">
+          <img class="react-logo" src="react-logo.png" alt="react-logo" />
+          <h2>React</h2>
+          <p>
+            The ultimate Java-script library that makes your live smoother than
+            an aftershave. 🌬️
+          </p>
+        </div>
       </div>
-    </div>
-    <div class="grid-item">
-      <div class="news soft-skills">
-        <img
-          class="soft-skills-logo"
-          src="soft-skills-logo.png"
-          alt="soft-skills-logo"
-        />
-        <h2>Soft skills</h2>
-        <p>
-          The personal attribute that enhances an individual's ability to get a
-          job done (together with bf Google). ✔
-        </p>
+      <div class="grid-item">
+        <div class="news c++">
+          <img class="c++-logo" src="c++-logo.png" alt="c++-logo" />
+          <h2>C++</h2>
+          <p>
+            The highest performer in class helping with resources and memory! 🧠
+          </p>
+        </div>
       </div>
-    </div>
-  </section>
-</body>
+      <div class="grid-item">
+        <div class="news redux">
+          <img class="redux-logo" src="redux-logo.png" alt="redux-logo" />
+          <h2>Redux</h2>
+          <p>
+            The predictable state container that helps apps to behave
+            consistently. This dude and React are this 🤞 tight.
+          </p>
+        </div>
+      </div>
+      <div class="grid-item">
+        <div class="news github">
+          <img class="github-logo" src="github-logo.png" alt="github-logo" />
+          <h2>Github</h2>
+          <p>
+            The best code hosting platform ever. There is no host like Github!
+            🏠
+          </p>
+        </div>
+      </div>
+      <div class="grid-item">
+        <div class="news soft-skills">
+          <img
+            class="soft-skills-logo"
+            src="soft-skills-logo.png"
+            alt="soft-skills-logo"
+          />
+          <h2>Soft skills</h2>
+          <p>
+            The personal attribute that enhances an individual's ability to get
+            a job done (together with bf Google). ✔
+          </p>
+        </div>
+      </div>
+    </section>
+  </body>
+</html>
