--- a/new code/index.html
+++ b/new code/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="./style.css" />
     <script src="javascript.js"></script>
   </head>
+
   <body>
     <header>
       <h2>Juicy <span>knowledge</span></h2>
@@ -15,11 +16,11 @@
       <div class="nav-links-desktop">
         <nav>
           <ul>
-            <li><a href="https://www.google.com/">Home</a></li>
-            <li><a href="https://www.google.com/">About</a></li>
-            <li><a href="https://www.google.com/">Service</a></li>
-            <li><a href="https://www.google.com/">Portfolio</a></li>
-            <li><a href="https://www.google.com/">Contact us</a></li>
+            <li><a href="#">Home</a></li>
+            <li><a href="#">About</a></li>
+            <li><a href="#">Service</a></li>
+            <li><a href="#">Portfolio</a></li>
+            <li><a href="#">Contact us</a></li>
           </ul>
         </nav>
       </div>
@@ -27,11 +28,10 @@
         <button class="dropbtn" onclick="myDropdown()"></button>
         <div class="dropdown-content" id="dropdown-id">
           <nav>
-            <a href="https://www.google.com/">Home</a>
-            <a href="https://www.google.com/">About</a>
-            <a href="https://www.google.com/">Service</a
-            ><a href="https://www.google.com/">Portfolio</a
-            ><a href="https://www.google.com/">Contact</a>
+            <a href="#">Home</a>
+            <a href="#">About</a>
+            <a href="#">Service</a><a href="#">Portfolio</a
+            ><a href="#">Contact</a>
           </nav>
         </div>
       </div>
@@ -55,6 +55,7 @@
           <button class="read-more" type="button">Read more</button>
         </div>
       </div>
+
       <div class="grid-item">
         <div class="news html">
           <img class="html-logo" src="html-logo.png" alt="html-logo" />
@@ -62,6 +63,7 @@
           <p>The structure planner we can always rely on! 📔</p>
         </div>
       </div>
+
       <div class="grid-item">
         <div class="news css">
           <img class="css-logo" src="css-logo.png" alt="css-logo" />
@@ -69,6 +71,7 @@
           <p>Cascading Style Sheets, the winner of our beauty contest! 👑</p>
         </div>
       </div>
+
       <div class="grid-item">
         <div class="news javascript">
           <img
@@ -83,6 +86,7 @@
           </p>
         </div>
       </div>
+
       <div class="grid-item">
         <div class="news react">
           <img class="react-logo" src="react-logo.png" alt="react-logo" />
@@ -93,6 +97,7 @@
           </p>
         </div>
       </div>
+
       <div class="grid-item">
         <div class="news c++">
           <img class="c++-logo" src="c++-logo.png" alt="c++-logo" />
@@ -102,6 +107,7 @@
           </p>
         </div>
       </div>
+
       <div class="grid-item">
         <div class="news redux">
           <img class="redux-logo" src="redux-logo.png" alt="redux-logo" />
@@ -112,6 +118,7 @@
           </p>
         </div>
       </div>
+
       <div class="grid-item">
         <div class="news github">
           <img class="github-logo" src="github-logo.png" alt="github-logo" />
@@ -122,6 +129,7 @@
           </p>
         </div>
       </div>
+
       <div class="grid-item">
         <div class="news soft-skills">
           <img
