Add. styling to tablet & desktop. Add. button.

--- a/code/index.html
+++ b/code/index.html
@@ -26,14 +26,28 @@
     </header>
     <div class="container">
       <!--featured island-->
-      <h2>Featured Item</h2>
+
       <section class="featured">
         <img src="assets/images/milos.jpg" alt="Picture of Milos" />
-        <h3>Milos</h3>
-        <p class="info-text">
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit. In commodo
-          consequat.
-        </p>
+        <div class="featured-text">
+          <h3>Milos</h3>
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec ac
+            nisi non magna rhoncus efficitur finibus ac ipsum. Sed accumsan
+            rhoncus dignissim. Nullam eget maximus mi. Praesent rutrum lacinia
+            lobortis. Quisque rutrum vulputate tortor vel aliquet. Pellentesque
+            a mauris placerat, volutpat diam aliquet, pretium nisl. Nam ac
+            tellus facilisis, cursus ante quis, tincidunt nisl. Cras porta
+            vehicula dui at molestie. Nunc in enim a sem facilisis mattis eget
+            nec magna. In fermentum euismod ligula quis lacinia. Nullam turpis
+            nunc, consequat ut pulvinar at, gravida tincidunt tellus. Nulla non
+            ullamcorper justo, vitae dictum est. Vestibulum ante ipsum primis in
+            faucibus orci.
+          </p>
+          <button class="button">
+            <a href="#">Read more</a>
+          </button>
+        </div>
       </section>
       <!--islands section-->
       <section class="islands">
@@ -41,32 +55,48 @@
           <img src="assets/images/crete.jpg" alt="Picture of Crete" />
           <h3>Crete</h3>
           <p class="info-text">
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. In commodo
-            consequat.
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas
+            laoreet, sem vitae sagittis tincidunt, purus ipsum volutpat nunc, ac
+            ultricies diam ex nec augue. Proin bibendum, orci viverra maximus
+            commodo, velit ligula bibendum mauris, ac sagittis mauris nunc id
+            justo. Donec id risus et purus efficitur ullamcorper. Ut et
+            convallis.
           </p>
         </article>
         <article class="card">
           <img src="assets/images/mykonos.jpg" alt="Picture of Mykonos" />
           <h3>Mykonos</h3>
           <p class="info-text">
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. In commodo
-            consequat.
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas
+            laoreet, sem vitae sagittis tincidunt, purus ipsum volutpat nunc, ac
+            ultricies diam ex nec augue. Proin bibendum, orci viverra maximus
+            commodo, velit ligula bibendum mauris, ac sagittis mauris nunc id
+            justo. Donec id risus et purus efficitur ullamcorper. Ut et
+            convallis.
           </p>
         </article>
         <article class="card">
           <img src="assets/images/zakynthos.jpg" alt="Picture of Zakynthos" />
           <h3>Zakynthos</h3>
           <p class="info-text">
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. In commodo
-            consequat.
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas
+            laoreet, sem vitae sagittis tincidunt, purus ipsum volutpat nunc, ac
+            ultricies diam ex nec augue. Proin bibendum, orci viverra maximus
+            commodo, velit ligula bibendum mauris, ac sagittis mauris nunc id
+            justo. Donec id risus et purus efficitur ullamcorper. Ut et
+            convallis.
           </p>
         </article>
         <article class="card">
           <img src="assets/images/santorini.jpg" alt="Picture of Santorini" />
           <h3>Santorini</h3>
           <p class="info-text">
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. In commodo
-            consequat.
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas
+            laoreet, sem vitae sagittis tincidunt, purus ipsum volutpat nunc, ac
+            ultricies diam ex nec augue. Proin bibendum, orci viverra maximus
+            commodo, velit ligula bibendum mauris, ac sagittis mauris nunc id
+            justo. Donec id risus et purus efficitur ullamcorper. Ut et
+            convallis.
           </p>
         </article>
       </section>
