Update regarding misspellings

--- a/code/index.html
+++ b/code/index.html
@@ -70,7 +70,7 @@
         <img class ="fit-articleimage" img src="https://i.ibb.co/w0RqSvJ/Beyond.png" alt="Squiggly rainbow pastel purple">
             <h4>DEBATE: FREE BIRTH CONTROL FOR WOMEN</h4>
                 <p> Columnist Ingred K on birth control: "Women are entitled to their choice, even when abortions being legal,
-                one shouldn't have to go through one - Free birth contorl for all "[...] 
+                one shouldn't have to go through one - Free birth control for all "[...] 
             </p>    
         </div> 
      <div class="news-item">
