--- a/index1.html
+++ b/index1.html
@@ -5,22 +5,34 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" type="text/css" href="style.css"/>
+    <link rel="stylesheet" type="text/css" href="style1.css"/>
 </head>
 <body>
 
-<div class="top-bar">
-    <div class="logo-container">
-        <img class="logo" src="./Images/logo.png" />
+    <div class="navbar">
+        <div class="container nav-container">
+            <input class="checkbox" type="checkbox" name="" id="" />
+            <div class="hamburger-lines">
+                <span class="line line1"></span>
+                <span class="line line2"></span>
+                <span class="line line3"></span>
+            </div>
+
+            <div class="logo-container">
+                <img class="logo" src="./Images/pizza.png" />
+                <h1 class="logo-name">Snack Time(s)</h1>
+            </div>
+
+            <div class="menu-items">
+                <li><a href="https://www.ica.se/recept/cupcakes-722826/">sweet</a></li>
+                <li><a href="https://www.arla.se/recept/saltkokt-potatis-med-mojo-rojo/">salty</a></li>
+                <li><a href="https://www.bbcgoodfood.com/recipes/greggs-tangy-lemon-tart">sour</a></li>
+                <li><a href="https://www.ica.se/recept/swedish-coffee-621855/">bitter</a></li>
+            </div>
+        </div>
     </div>
 
-    <nav class="nav">
-        <a class="nav-item" href="https://www.ica.se/recept/cupcakes-722826/">sweet</a>
-        <a class="nav-item" href="https://www.arla.se/recept/saltkokt-potatis-med-mojo-rojo/">salty</a>
-        <a class="nav-item" href="https://www.bbcgoodfood.com/recipes/greggs-tangy-lemon-tart">sour</a>
-        <a class="nav-item" href="https://www.ica.se/recept/swedish-coffee-621855/">bitter</a>
-    </nav>
-</div>
+
 
 <div class="box-one">
     <img src="./Images/bowlofpasta.png" alt="picture of pasta">
