--- a/code/index.html
+++ b/code/index.html
@@ -10,7 +10,7 @@
     <header>
       <div class="logo-sitename">
         <div class="logo">
-          <img src="logo.svg" alt="logo"> </div>
+          <img src="logo2.svg" alt="logo"> </div>
         <div class="sitename">
         <h1>SITE NAME</h1></div>
       </div>
@@ -58,7 +58,7 @@
       </a>     
 
       <a href="newslink" class="news-item other-news">
-        <img src="airport.jpg" alt="">
+        <img src="images/airport.jpg" alt="">
         <div class="text-box">
           <h3>other news here</h3> 
           <p>Lorem ipsum dolor sit amet.  Et galisum doloribus et esse esse qui voluptatibus doloremque et velit vero est dicta facilis.</p>
@@ -66,7 +66,7 @@
       </a>
 
       <a href="newslink" class="news-item other-news">
-        <img src="healthcare.jpg" alt="">
+        <img src="images/healthcare.jpg" alt="">
         <div class="text-box">
           <h3>other news here</h3> 
           <p>Lorem ipsum dolor sit amet.  Et galisum doloribus et esse esse qui voluptatibus doloremque et velit vero est dicta facilis.</p>
@@ -74,7 +74,7 @@
       </a>
 
       <a href="newslink" class="news-item other-news">
-        <img src="war.jpg" alt="">
+        <img src="images/war.jpg" alt="">
         <div class="text-box">
           <h3>other news here</h3> 
           <p>Lorem ipsum dolor sit amet. </p>
@@ -82,7 +82,7 @@
       </a>
 
       <a href="newslink" class="news-item other-news">
-        <img src="peru.jpg" alt="">
+        <img src="images/peru.jpg" alt="">
         <div class="text-box">
           <h3>other news here</h3> 
           <p>Lorem ipsum dolor sit amet.  Et galisum doloribus et esse esse qui voluptatibus doloremque et velit vero est dicta facilis.</p>
@@ -90,7 +90,7 @@
       </a>
 
       <a href="newslink" class="news-item other-news">
-        <img src="finance.jpg" alt="">
+        <img src="images/finance.jpg" alt="">
         <div class="text-box">
           <h3>other news here</h3> 
           <p>Lorem ipsum dolor sit amet.  Et galisum doloribus et esse esse qui voluptatibus doloremque et velit vero est dicta facilis.</p>
@@ -98,7 +98,7 @@
       </a>
 
       <a href="newslink" class="news-item other-news">
-        <img src="airplanes.jpg" alt=""> 
+        <img src="images/airplanes.jpg" alt=""> 
         <div class="text-box">
           <h3>other news here</h3> 
           <p>Lorem ipsum dolor sit amet.  Et galisum doloribus et esse esse qui voluptatibus doloremque et velit vero est dicta facilis.</p>
@@ -106,7 +106,7 @@
       </a>
 
       <a href="newslink" class="news-item other-news">
-        <img src="family.jpg" alt="">
+        <img src="images/family.jpg" alt="">
         <div class="text-box">
           <h3>other news here</h3> 
           <p>Lorem ipsum dolor sit amet.  Et galisum doloribus et esse esse qui voluptatibus doloremque et velit vero est dicta facilis.</p>
