--- a/code/index.html
+++ b/code/index.html
@@ -8,24 +8,26 @@
     <script src="https://kit.fontawesome.com/123ae26214.js" crossorigin="anonymous"></script>
   </head>
   <body>
-    <header>
-      <nav class="navbar">
-        <div class="logo">
-          <a href="#">
-            <i class="fa-solid fa-paw logo-icon"></i>
-            <p class="logo-text">Catnews</p>
-          </a>
-        </div>
-        <ul class="nav-links">
-          <li class="nav-item"><a href="#">Menu item</a></li>
-          <li class="nav-item"><a href="#">Menu item</a></li>
-          <li class="nav-item"><a href="#">Menu item</a></li>
-          <li class="nav-item"><a href="#">Menu item</a></li>
-        </ul>
+    <header class="header">
+      <a href="#" class="site-branding">
+        <span class="site-logo">
+          <i class="fa-solid fa-paw logo-icon"></i>
+        </span>
+        <span class="site-name">
+          Catnews
+        </span>
+      </a>
+      
+      <nav class="main-menu">
+          <a href="#" class="main-menu-item">Menu item</a>
+          <a href="#" class="main-menu-item">Menu item</a>
+          <a href="#" class="main-menu-item">Menu item</a>
+          <a href="#" class="main-menu-item">Menu item</a>
       </nav>
-    </header>
 
-    <section class="articles-grid">
+    </header>
+<!-- 
+    <section class="article-grid">
       <div class="article article--featured">
         <a href="#">
           <img src="https://i.pinimg.com/564x/8f/7e/00/8f7e00104df8f2b3d89af451808f209b.jpg">
@@ -35,7 +37,7 @@
       </div>
     </section>
     
-    <section class="articles-grid">
+    <section class="article-grid">
       <div class="article article--regular">
         <a href="#">
           <img src="https://i.pinimg.com/564x/8f/7e/00/8f7e00104df8f2b3d89af451808f209b.jpg">
@@ -64,6 +66,6 @@
           <p class="article-text">Regular article text</p>
         </a>
       </div>
-    </section>
+    </section> -->
   </body>
 </html>
