Add featured article

--- a/code/index.html
+++ b/code/index.html
@@ -27,15 +27,14 @@
         </nav>
 
       </header>
-
-      <!--
+      
         <div class="article article--featured">
           <a href="#">
-            <img src="https://i.pinimg.com/564x/8f/7e/00/8f7e00104df8f2b3d89af451808f209b.jpg">
-            <h1 class="article-title">Feature article title</h1>
-            <p class="article-text">Feature article text</p>
+            <!-- <img src="https://i.pinimg.com/564x/8f/7e/00/8f7e00104df8f2b3d89af451808f209b.jpg"> -->
+            <h1 class="article-title">Featured article title</h1>
+            <p class="article-text">Featured article text</p>
           </a>
-        </div>-->
+        </div>
       
       <section class="article-grid">
         <div class="article article--regular">
