update with new name, and nav-bar etc.

--- a/code/index.html
+++ b/code/index.html
@@ -12,7 +12,7 @@
         <div class="logo">
           <img src="logo2.svg" alt="logo"> </div>
         <div class="sitename">
-        <h1>SITE NAME</h1></div>
+        <h1>think new(s) </h1></div>
       </div>
         <div class="dropdown">
           <button class="dropbtn">
@@ -46,7 +46,7 @@
     <section class="news-items">
       <a href="bignews" class="news-item big-news">
       
-        <img src="sports.jpg" alt="">
+        <img src="images/airport.jpg" alt="">
         <div class="text-box">
           <h2>BIG NEWS ITEM</h2> 
           <p>Lorem ipsum dolor sit amet. Sed consequuntur omnis est distinctio cupiditate ut soluta consequuntur ut nihil voluptate sit fuga sint rem unde reprehenderit? Ut soluta culpa ut expedita accusantium ex excepturi eveniet ad nihil maiores. </p>
@@ -58,7 +58,7 @@
       </a>     
 
       <a href="newslink" class="news-item other-news">
-        <img src="images/airport.jpg" alt="">
+        <img src="images/sports.jpg" alt="">
         <div class="text-box">
           <h3>other news here</h3> 
           <p>Lorem ipsum dolor sit amet.  Et galisum doloribus et esse esse qui voluptatibus doloremque et velit vero est dicta facilis.</p>
@@ -78,6 +78,31 @@
         <div class="text-box">
           <h3>other news here</h3> 
           <p>Lorem ipsum dolor sit amet. </p>
+        </div>
+      </a>
+
+      <a href="newslink" class="news-item other-news">
+        <img src="images/climate.jpg" alt="">
+        <div class="text-box">
+          <h3>other news here</h3> 
+          <p>Lorem ipsum dolor sit amet.  Et galisum doloribus et esse esse qui voluptatibus doloremque et velit vero est dicta facilis.</p>
+        </div>
+      </a>
+
+      <a href="newslink" class="news-item other-news">
+        <img src="images/city.jpg" alt="">
+        <div class="text-box">
+          <h3>other news here</h3> 
+          <p>Lorem ipsum dolor sit amet. Et galisum doloribus et esse esse qui voluptatibus doloremque et velit vero est dicta facilis.</p>
+        </p>
+        </div>
+      </a>
+
+      <a href="newslink" class="news-item other-news">
+        <img src="images/science.jpg" alt="">
+        <div class="text-box">
+          <h3>other news here</h3> 
+          <p>Lorem ipsum dolor sit amet.  Et galisum doloribus et esse esse qui voluptatibus doloremque et velit vero est dicta facilis.</p>
         </div>
       </a>
 
