--- a/code/index.html
+++ b/code/index.html
@@ -34,7 +34,7 @@
       <article class="one">
         <div class="big-news">
           <img src="/Volumes/NO_NAME/_technigo/Project/project-news-site/code/img/trainstation.jpg" alt="Trainstation">
-          <h1> Tågluffa i Europa</h1>
+          <h1> Interrail in Europe</h1>
           <p>Lorem ipsum dolor sit amet, consectetur adipiscing
             elit, sed do eiusmod tempor incididunt ut labore et 
             dolore magna aliqua. Feugiat scelerisque varius morbi 
