minor edits and styling

--- a/code/index.html
+++ b/code/index.html
@@ -60,11 +60,11 @@
               <p>
                 Hiking and trails as well as other reacreational activities, such as biking, rock climbing and camping
                 are the most popular activities at the Red Rock.
-                <br>
+                <!-- <br>
                 For those interested in geology or plants and wildlife the conservation area has a lot to offer too.
                 Red Rock Canyon is home to the desert tortoise and desert bighorn sheep among other animals and around 
-                600 species of plants including banana yucca and agave. 
-              </p>
+                600 species of plants including banana yucca and agave. -->
+              </p> 
             </a>
           </div>      
       </section>
